[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/CreationUtilisateur.gd" type="Script" id=2]
[ext_resource path="res://scripts/Color_MainPanel.gd" type="Script" id=3]
[ext_resource path="res://scene/ButtonExit.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/PanelContainer.gd" type="Script" id=5]

[node name="CreationUtilisateur" type="Node2D"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )

[node name="MainPanel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
script = ExtResource( 3 )

[node name="PanelMenu" parent="PanelContainer/MainPanel" instance=ExtResource( 1 )]
anchor_left = 0.001
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 0.056
margin_left = -0.00999999
margin_top = -0.172
margin_right = -1.0
margin_bottom = 0.183998

[node name="ButtonExit" parent="PanelContainer/MainPanel" instance=ExtResource( 4 )]

[node name="Label1" type="Label" parent="PanelContainer/MainPanel"]
anchor_left = 0.056
anchor_top = 0.097
anchor_right = 0.476
anchor_bottom = 0.206
margin_left = 0.439999
margin_top = 0.157997
margin_right = 0.23999
margin_bottom = 0.283989
text = "Création de Rôle
(Fonctionne pas pour donner des droits)"
align = 1
valign = 1

[node name="Inputs" type="Panel" parent="PanelContainer/MainPanel"]
anchor_top = 0.193
anchor_right = 0.5
anchor_bottom = 0.998
margin_left = 1.0
margin_top = -0.0979996
margin_bottom = 0.171997

[node name="NameRole" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.044
anchor_right = 0.984
anchor_bottom = 0.117
margin_left = -0.0640001
margin_top = -0.0680027
margin_right = 0.0639954
margin_bottom = 0.000995636

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/NameRole"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Nom Role :"
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/NameRole"]
anchor_left = 0.295
anchor_top = 0.096
anchor_right = 0.967
anchor_bottom = 0.8
margin_left = 0.0400085
margin_top = -0.3144
margin_right = 0.103973
margin_bottom = -0.619999
rect_pivot_offset = Vector2( 350, 103 )

[node name="Password" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.132
anchor_right = 0.984
anchor_bottom = 0.205
margin_left = -0.0640001
margin_top = -0.204002
margin_right = 0.0639954
margin_bottom = -0.13501

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/Password"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Mot de passe :"
align = 1
valign = 1

[node name="Input" type="LineEdit" parent="PanelContainer/MainPanel/Inputs/Password"]
anchor_left = 0.295
anchor_top = 0.058
anchor_right = 0.967
anchor_bottom = 0.8
margin_left = 0.0400085
margin_top = -0.00244975
margin_right = 0.103973
margin_bottom = 0.380005
rect_pivot_offset = Vector2( 350, 103 )
secret = true

[node name="Infos" type="Label" parent="PanelContainer/MainPanel/Inputs/Password"]
visible = false
light_mask = 31
anchor_left = 0.066
anchor_top = 2.836
anchor_right = 0.328
anchor_bottom = 4.458
margin_left = -0.208
margin_top = -0.0128937
margin_right = -0.0640106
margin_bottom = -0.0124359
text = "Si date de validité
finir par
 :YYYY-MM-DD"

[node name="Rights" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.219
anchor_right = 0.984
anchor_bottom = 0.293
margin_left = -0.0640001
margin_top = 0.206993
margin_right = 0.0639954
margin_bottom = -0.271011

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/Rights"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Droits :"
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/Rights"]
anchor_left = 0.295
anchor_top = 0.012
anchor_right = 0.967
anchor_bottom = 0.929
margin_left = 0.0399933
margin_top = -0.4134
margin_right = 0.104004
margin_bottom = -0.00405502
rect_pivot_offset = Vector2( 350, 103 )

[node name="Infos" type="Label" parent="PanelContainer/MainPanel/Inputs/Rights"]
visible = false
anchor_left = 0.639
anchor_top = 1.173
anchor_right = 1.033
anchor_bottom = 3.031
margin_left = 0.167969
margin_top = 0.0151596
margin_right = -0.104004
margin_bottom = 1.00705
text = "Droits possibles :
DELETE, INSERT, REFERENCES,
 SELECT, TRIGGER, TRUNCATE, 
UPDATE Séparés de virgules"

[node name="QueryUsed" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.111
anchor_top = 0.458
anchor_right = 1.0
anchor_bottom = 0.898
margin_left = 0.0559959
margin_top = -0.17601
margin_bottom = 0.143982

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/QueryUsed"]
anchor_left = 0.071
anchor_top = 0.077
anchor_right = 0.375
anchor_bottom = 0.231
margin_left = 0.191999
margin_top = -0.0160007
margin_right = -1.52588e-05
margin_bottom = -0.0480003
text = "Requête utilisé "
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/QueryUsed"]
anchor_left = 0.036
anchor_top = 0.308
anchor_right = 0.964
anchor_bottom = 0.923
margin_left = -0.128
margin_top = -0.064003
margin_right = 0.127991
margin_bottom = 0.0159912
readonly = true

[node name="NodeButtonGrant" type="Control" parent="PanelContainer/MainPanel"]
anchor_left = 0.5
anchor_top = 0.097
anchor_right = 0.991
anchor_bottom = 0.985
margin_top = 0.157997
margin_right = 0.0899658
margin_bottom = -0.210022

[node name="Button" type="Button" parent="PanelContainer/MainPanel/NodeButtonGrant"]
anchor_left = 0.177
anchor_top = 0.108
anchor_right = 0.355
anchor_bottom = 0.146
margin_left = 0.208
margin_top = -0.16
margin_right = -0.0800171
margin_bottom = 0.0799942
text = "Liste droits"

[node name="Panel" type="Panel" parent="PanelContainer/MainPanel/NodeButtonGrant"]
anchor_left = 0.129
anchor_top = 0.169
anchor_right = 0.403
anchor_bottom = 0.554
margin_left = 0.015995
margin_top = 0.119995
margin_right = 0.111984
margin_bottom = -0.0800171

[node name="Button" type="Button" parent="PanelContainer/MainPanel/NodeButtonGrant/Panel"]
margin_right = 136.0
margin_bottom = 20.0
text = "SELECT"

[node name="Button2" type="Button" parent="PanelContainer/MainPanel/NodeButtonGrant/Panel"]
margin_top = 30.0
margin_right = 136.0
margin_bottom = 50.0
text = "UPDATE"

[node name="Button3" type="Button" parent="PanelContainer/MainPanel/NodeButtonGrant/Panel"]
margin_top = 60.0
margin_right = 136.0
margin_bottom = 80.0
text = "INSERT"

[node name="Button4" type="Button" parent="PanelContainer/MainPanel/NodeButtonGrant/Panel"]
margin_top = 90.0
margin_right = 136.0
margin_bottom = 110.0
text = "TRUNCATE"

[node name="Button5" type="Button" parent="PanelContainer/MainPanel/NodeButtonGrant/Panel"]
margin_top = 120.0
margin_right = 136.0
margin_bottom = 140.0
text = "REFERENCES"

[node name="Button6" type="Button" parent="PanelContainer/MainPanel/NodeButtonGrant/Panel"]
margin_top = 150.0
margin_right = 136.0
margin_bottom = 170.0
text = "TRIGGER"

[node name="Button7" type="Button" parent="PanelContainer/MainPanel/NodeButtonGrant/Panel"]
margin_top = 180.0
margin_right = 136.0
margin_bottom = 200.0
text = "ALL PRIVILEGES"

[node name="Button" type="Button" parent="PanelContainer/MainPanel"]
margin_left = 185.0
margin_top = 281.0
margin_right = 313.0
margin_bottom = 313.0
text = "Valider"

[connection signal="mouse_entered" from="PanelContainer/MainPanel/Inputs/Password/Input" to="." method="_on_Input_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MainPanel/Inputs/Password/Input" to="." method="_on_Input_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MainPanel/Inputs/Rights/Input" to="." method="_on_Input2_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MainPanel/Inputs/Rights/Input" to="." method="_on_Input2_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MainPanel/NodeButtonGrant/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/MainPanel/Button" to="." method="_on_Button2_pressed"]
